[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pdf-document-mcp"
version = "1.0.0"
description = "MEOK AI Labs — pdf-document-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0", "pymupdf>=1.21.0", ]
keywords = ["mcp", "ai", "meok", "pdf", "document", "mcp/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/pdf-document-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
